# noval-flow

./: .env.example  .gitignore  AGENTS.md  README.md  fix_labels.py  pyproject.toml  pyrightconfig.json
data/: _page_script.js  _page_script_live.js  _served_root_after_restart.html  _served_script_verified.js  codex_smoke_output.txt  e2e_formal_chain.db-journal  event_timeline_recovered_31_from_edit_4485f2567f.json  event_timeline_recovery_run_1b8b71f14a_71.json  event_timeline_recovery_run_85110bd239_75.json  manual_patch_suheng.json  story_blueprint_restore_31_10_book_04310ae805.json  story_blueprint_restore_book_04310ae805.json
evals/: __init__.py
examples/: 01_storage_demo.py  02_research_demo.py  03_writer_demo.py  04_critic_patch_demo.py  05_master_demo.py  06_debug_writer_agent.py  07_debug_research_agent.py  08_debug_critic_agent.py  COMMAND_GUIDE.md  _example_support.py
io/: README.md  agent_capabilities.md  critic_agent.md  master_agent.md  research_agent.md  schemas_index.md  writer_agent.md
knowledge/: README.md  _inbox.txt  generate_cards.py
prompts/: README.md
scripts/: check_prompt_encoding.py
tests/: test_beat_plan_eval.py  test_case_comparison.py  test_codex_cli_client.py  test_doubao_client.py  test_eval_case_exporter.py  test_json_generation_and_expand.py  test_llm_executor.py  test_llm_factory.py  test_long_arc_step8_eval.py  test_novel_self_improve_skill.py  test_prompt_rendering.py  test_requirement_cases.py  test_romance_cross_tone_suite.py  test_romance_eval_harness.py  test_rule_metrics.py  test_schema_and_context.py  (+6 more)
(+649 files in other folders)
