[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-flow"
version = "0.1.0"
description = "Multi-agent novel generation pipeline for 100k-word Zhihu-style fiction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<0.29",
]

[project.scripts]
novel-flow = "novel_flow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
